--- a/docs/spec/v2.rst
+++ b/docs/spec/v2.rst
@@ -88,7 +88,8 @@ dimension_separator
     nested, or hierarchical, keys of the form "0/0" that SHOULD where possible
     produce a directory-like structure.
 
-Other keys MUST NOT be present within the metadata object.
+Other keys SHOULD NOT be present within the metadata object and SHOULD be
+ignored by implementations.
 
 For example, the JSON object below defines a 2-dimensional array of 64-bit
 little-endian floating point numbers with 10000 rows and 10000 columns, divided
